# mlops_zoomcamp_2025

./: .gitignore  pyproject.toml
homework1/: hw1.ipynb
homework2/: README.md  hpo.py  load_data.py  register_model.py  train.py
homework3/: Dockerfile.airflow  Dockerfile.mlflow  Makefile  README.md  docker-compose.yaml  requirements.txt
homework3/config/: airflow.cfg
homework3/dags/: hw3-linear-dv.py  hw3-memory-opt.py  hw3.py
week2/: README.md  duration-prediction.ipynb
