[tool.poetry]
name = "mlops-zoomcamp-2025"
version = "0.1.0"
description = ""
authors = ["Pathorn Kitisupavatana <pathorn.kiti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
pyarrow = "^19.0.0"
statsmodels = "^0.14.4"
scipy = "^1.15.2"
mlflow = "^2.22.0"
seaborn = "^0.13.2"
xgboost = "^3.0.0"
hyperopt = "^0.2.7"
click = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
